--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,6 +33,8 @@ theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
+permalink: /:categories/:year/:month/:day/:title:output_ext
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
