--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: niquapod's quest for knowledge
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my way of remembering what I've learned from TryHackMe without
-  having to rumage through slips of paper or comp books.
+  having to rummage through slips of paper or comp books.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: niquapod
